syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "KeymanagerGrpc";

package br.com.zup;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service KeymanagerCadastraGrpcService {
  rpc cadastro (CadastroPixRequest) returns (CadastroPixResponse) {}
}

service KeymanagerDeletaGrpcService {
  rpc deleta (DeletaPixRequest) returns (google.protobuf.Empty) {}
}

service KeymanagerConsultaGrpcService {
  rpc consulta (ConsultaPixRequest) returns (ConsultaPixResponse) {}
}

service KeymanagerListaGrpcService {
  rpc lista (ListaPixRequest) returns (ListaPixResponse) {}
}

message ValidationErrors {
  repeated string message = 1;
}

message Titular {
  string nome = 1;
  string cpf = 2;
}

message Conta {
  string instituicao = 1;
  string agencia = 2;
  string numero = 3;
  TipoDeConta tipo = 4;
}

enum TipoDeChave {
  TIPO_CHAVE_DESCONHECIDO = 0;
  CPF = 1;
  TELEFONE = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

enum TipoDeConta {
  TIPO_CONTA_DESCONHECIDO = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message CadastroPixRequest {
  string idTitular = 1;
  TipoDeChave tipoDeChave = 2;
  string valor = 3;
  TipoDeConta tipoDeConta = 4;
}

message CadastroPixResponse {
  string pixId = 1;
}

message DeletaPixRequest {
  string pixId = 1;
  string clienteId = 2;
}

message ConsultaPixRequest {
  message ConsultaInterna {
    string pixId = 1;
    string clienteId = 2;
  }
  oneof consulta {
    ConsultaInterna interna = 1;
    string chave = 2;
  }
}

message ConsultaPixResponse {
  string pixId = 1;
  string clienteId = 2;
  TipoDeChave tipoDeChave = 3;
  string valor = 4;
  Titular titular = 5;
  Conta conta = 6;
  google.protobuf.Timestamp criadaEm = 7;
}

message ListaPixRequest {
  string clienteId = 1;
}

message ListaPixResponse {

  message itemChave {
    string pixId = 1;
    string clienteId = 2;
    TipoDeChave tipoDeChave = 3;
    string valor = 4;
    TipoDeConta tipoDeConta = 5;
    google.protobuf.Timestamp criadaEm = 6;
  }
  repeated itemChave chaves = 1;

}